--- a/package.json
+++ b/package.json
@@ -13,27 +13,29 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/vector-icons": "^12.0.5",
-    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "axios": "^0.27.2",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
+    "react": "^18.1.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-drop-shadow": "^0.0.4",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "^4.0.1",
-    "react-native-screens": "^3.12.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.4"
   },
   "private": true
 }
