--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "jac-front",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -21,11 +20,16 @@
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "react": "^18.1.0",
+    "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-drop-shadow": "^0.0.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-mmkv": "^2.4.1",
+    "react-native-reanimated": "^2.8.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
