--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-drop-shadow": "^0.0.4",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-mmkv": "^2.4.1",
@@ -33,6 +32,8 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-shadow-2": "^6.0.5",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
