--- a/package.json
+++ b/package.json
@@ -22,19 +22,22 @@
     "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-mmkv": "^2.4.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.8.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-shadow-2": "^6.0.5",
     "react-native-svg": "^12.3.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
